opam-version: "2.0"
maintainer: "Hennequin Lab"
authors: [ "Hennequin Lab" ]
license: "MIT"
homepage: "https://github.com/hennequin-lab/comm"
dev-repo: "git+https://github.com/hennequin-lab/comm.git"
bug-reports: "https://github.com/hennequin-lab/comm/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06.0"}
  "mpi" {>= "1.0" }
  "dune" {build & >= "1.1.0"}
]
synopsis: "Thin wrapper around MPI"
